--- a/RSSVE/Configs/Scatterer_Configs/Earth/Earth_Atmosphere.cfg
+++ b/RSSVE/Configs/Scatterer_Configs/Earth/Earth_Atmosphere.cfg
@@ -3,7 +3,8 @@ Scatterer_atmosphere
 	Atmo
 	{
 		name = Earth
-		experimentalAtmoScale = 1.04999995
+		flattenScaledSpaceMesh = 0
+		experimentalAtmoScale = 1
 		cloudColorMultiplier = 1
 		cloudScatteringMultiplier = 0.0199999996
 		cloudSkyIrradianceMultiplier = 0.5
@@ -30,13 +31,13 @@ Scatterer_atmosphere
 			Item
 			{
 				altitude = 1333
-				skyExposure = 0.249052003
+				skyExposure = 0.224910006
 				skyAlpha = 1
 				skyExtinctionTint = 1
-				scatteringExposure = 0.229431003
-				extinctionThickness = 1
+				scatteringExposure = 0.219999999
+				extinctionThickness = 0.660000026
 				postProcessAlpha = 0.949999988
-				postProcessDepth = 0.0803790018
+				postProcessDepth = 1
 				extinctionTint = 0.5
 				openglThreshold = 10
 				viewdirOffset = 0.0120289996
@@ -44,27 +45,27 @@ Scatterer_atmosphere
 			Item
 			{
 				altitude = 8000
-				skyExposure = 0.244449005
+				skyExposure = 0.21449005
 				skyAlpha = 1
 				skyExtinctionTint = 1
-				scatteringExposure = 0.226668999
-				extinctionThickness = 1
+				scatteringExposure = 0.180000007
+				extinctionThickness = 0.800000012
 				postProcessAlpha = 0.949999988
 				postProcessDepth = 0.082220003
-				extinctionTint = 0.5
+				extinctionTint = 0.224999994
 				openglThreshold = 10
 				viewdirOffset = 0.00773600023
 			}
 			Item
 			{
 				altitude = 140000
-				skyExposure = 0.200000003
-				skyAlpha = 1
+				skyExposure = 0.190000007
+				skyAlpha = 0.949999988
 				skyExtinctionTint = 1
 				scatteringExposure = 0.200000003
-				extinctionThickness = 1
+				extinctionThickness = 2
 				postProcessAlpha = 0.949999988
-				postProcessDepth = 0.100000001
+				postProcessDepth = 1
 				extinctionTint = 0.5
 				openglThreshold = 10
 				viewdirOffset = 0
